src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>DLN__c</fullName>
        <encrypted>true</encrypted>
        <label>DLN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NHS_Number__c</fullName>
        <label>NHS Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <encrypted>true</encrypted>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>DLN__c</columns>
        <columns>SSN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valid_NHS_Number</fullName>
        <active>false</active>
        <errorConditionFormula>!(ISBLANK(SSN__c)||REGEX( SSN__c , &quot;[0-9]{3}-[0-9]{3}-[0-9]{4}&quot;))</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>Invalid SSN</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_SSN</fullName>
        <active>false</active>
        <errorConditionFormula>!(ISBLANK(SSN__c)||REGEX( SSN__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;))</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>Invalid SSN</errorMessage>
    </validationRules>
</CustomObject>